# wework-booker

./: .env.example  .gitignore  README.md  gui_entry.py  main.py  pyproject.toml  requirements.txt  wework_booker_mac.spec  wework_booker_win.spec
.github/workflows/: build.yml
installer/: setup.iss
resources/: icon.icns
scripts/: build_mac.sh  build_win.ps1  create_dmg.sh
wework_booker/: __init__.py  booker.py  browser.py  config.py  scheduler.py
wework_booker/gui/: __init__.py  app.py  booking_thread.py
